--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --dotenv .env.prod",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "nuxt": "^4.2.1",
+    "nuxt-svgo": "^4.2.6",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "sass": "^1.94.2",
+    "sass-loader": "^16.0.6",
     "vite-plugin-vuetify": "^2.1.2",
     "vuetify": "^3.10.11"
   }
